discussion/kv_engine/181654/181654_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

fixup

Change-Id: I8f2ac4fe167edface22242e6f956a6ac1bfa7cfb

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-10-21 06:09:03.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-21 06:12:25.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50586/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50586/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42438/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42438/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11189/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11189/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22811/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22811/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11093/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11093/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24628/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24628/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31813/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31813/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23795/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23795/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23392/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23392/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21364/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/eventdescriptor.h:72:10: error: no type named "atomic_bool" in namespace "std" [clang-diagnostic-error]
    std::atomic_bool enabled;
         ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/hashtable.h:218:24: error: type "std::_Hashtable<unsigned int, std::pair<const unsigned int, EventDescriptor>, std::allocator<std::pair<const unsigned int, EventDescriptor> >, std::__detail::_Select1st, std::equal_to<unsigned int>, std::hash<unsigned int>, std::__detail::_Mod_range_hashing, std::__detail::_Default_ranged_hash, std::__detail::_Prime_rehash_policy, std::__detail::_Hashtable_traits<false, false, true> >::__value_alloc_traits" (aka "int") cannot be used prior to "::" because it has no members [clang-diagnostic-error]
      typedef typename __value_alloc_traits::pointer            pointer;
                       ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unordered_map.h:105:18: note: in instantiation of template class "std::_Hashtable<unsigned int, std::pair<const unsigned int, EventDescriptor>, std::allocator<std::pair<const unsigned int, EventDescriptor> >, std::__detail::_Select1st, std::equal_to<unsigned int>, std::hash<unsigned int>, std::__detail::_Mod_range_hashing, std::__detail::_Default_ranged_hash, std::__detail::_Prime_rehash_policy, std::__detail::_Hashtable_traits<false, false, true> >" requested here
      _Hashtable _M_h;
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit_descriptor_manager.h:47:51: note: in instantiation of template class "std::unordered_map<unsigned int, EventDescriptor, std::hash<unsigned int>, std::equal_to<unsigned int>, std::allocator<std::pair<const unsigned int, EventDescriptor> > >" requested here
    std::unordered_map<uint32_t, EventDescriptor> descriptors;
                                                  ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/hashtable.h:219:24: error: type "std::_Hashtable<unsigned int, std::pair<const unsigned int, EventDescriptor>, std::allocator<std::pair<const unsigned int, EventDescriptor> >, std::__detail::_Select1st, std::equal_to<unsigned int>, std::hash<unsigned int>, std::__detail::_Mod_range_hashing, std::__detail::_Default_ranged_hash, std::__detail::_Prime_rehash_policy, std::__detail::_Hashtable_traits<false, false, true> >::__value_alloc_traits" (aka "int") cannot be used prior to "::" because it has no members [clang-diagnostic-error]
      typedef typename __value_alloc_traits::const_pointer      const_pointer;
                       ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unordered_map.h:113:36: error: no type named "mapped_type" in "std::_Hashtable<unsigned int, std::pair<const unsigned int, EventDescriptor>, std::allocator<std::pair<const unsigned int, EventDescriptor> >, std::__detail::_Select1st, std::equal_to<unsigned int>, std::hash<unsigned int>, std::__detail::_Mod_range_hashing, std::__detail::_Default_ranged_hash, std::__detail::_Prime_rehash_policy, std::__detail::_Hashtable_traits<false, false, true> >" [clang-diagnostic-error]
      typedef typename _Hashtable::mapped_type  mapped_type;
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit_descriptor_manager.h:47:51: note: in instantiation of template class "std::unordered_map<unsigned int, EventDescriptor, std::hash<unsigned int>, std::equal_to<unsigned int>, std::allocator<std::pair<const unsigned int, EventDescriptor> > >" requested here
    std::unordered_map<uint32_t, EventDescriptor> descriptors;
                                                  ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unordered_map.h:114:36: error: no type named "hasher" in "std::_Hashtable<unsigned int, std::pair<const unsigned int, EventDescriptor>, std::allocator<std::pair<const unsigned int, EventDescriptor> >, std::__detail::_Select1st, std::equal_to<unsigned int>, std::hash<unsigned int>, std::__detail::_Mod_range_hashing, std::__detail::_Default_ranged_hash, std::__detail::_Prime_rehash_policy, std::__detail::_Hashtable_traits<false, false, true> >" [clang-diagnostic-error]
      typedef typename _Hashtable::hasher       hasher;
                                   ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21364/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/eventdescriptor.h:72:10:
error: no type named "atomic_bool" in namespace "std" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21364/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20622/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
